Fix some styling issues in This or That CMS on mobile
The default width of the file inputs was not fitting nicely on some devices

--- a/src/catbox/games/this_or_that/resources/edit.css
+++ b/src/catbox/games/this_or_that/resources/edit.css
@@ -33,3 +33,12 @@ img.preview {
 img.preview[src=""], input[type="file"]:not([blob])+.remove-media {
     display: none;
 }
+
+@media screen and (max-width: 800px) {
+    input[type="file"] {
+        width: 100%;
+    }
+    textarea {
+        min-height: 4rem;
+    }
+}
